--- a/clisp.css
+++ b/clisp.css
@@ -1,11 +1,11 @@
-/* CLISP web pages stylesheets
-   Copyright (C) 2001 by Sam Steingold <sds@gnu.org>
+/* CLISP web pages stylesheets  -*- C -*-
+   Copyright (C) 2001-2002 by Sam Steingold <sds@gnu.org>
    Covered by the GNU GPL <http://www.gnu.org/copyleft/gpl.html> */
 
 /* reduce the whitespace (see also impnotes.css) */
 li p { margin: 0pt; }
 td p { margin: 0pt; }
-dd p { margin: 0pt }
+dd p { margin: 0pt; }
 
 h1,h2,h3,h4,h5,h6,p.center {
   text-align: center;
@@ -20,4 +20,9 @@ a:hover {
 
 p {
   text-align: justify;
+}
+
+table {
+  margin-left: auto;
+  margin-right: auto;
 }
