--- a/clisp.css
+++ b/clisp.css
@@ -1,6 +1,8 @@
-/* CLISP web pages stylesheets  -*- C -*-
-   Copyright (C) 2001-2002 by Sam Steingold <sds@gnu.org>
-   Covered by the GNU GPL <http://www.gnu.org/copyleft/gpl.html> */
+/*       -*- C -*-
+ * CLISP web pages stylesheets
+ * Copyright (C) 2001-2002 by Sam Steingold <sds@gnu.org>
+ * Covered by the GNU GPL <http://www.gnu.org/copyleft/gpl.html>
+ */
 
 /* reduce the whitespace (see also impnotes.css) */
 li p { margin: 0pt; }
@@ -22,6 +24,7 @@ p {
   text-align: justify;
 }
 
+/* center all tables */
 table {
   margin-left: auto;
   margin-right: auto;
